<resources>
    <string name="app_name">通讯录</string>
    <string name="action_settings">设置</string>
    <string name="action_groups">群组</string>
    <string name="action_search">搜索</string>
    <string name="friend_name">姓名</string>
    <string name="friend_phone">手机</string>
    <string name="friend_email">电子邮件</string>
    <string name="friend_company">公司</string>
    <string name="friend_group">群组</string>
    <string name="button_confirm">确认</string>
    <string name="button_cancel">取消</string>
    <string name="button_modify">修改</string>
    <string name="button_call">呼叫</string>
    <string name="button_msg">发短信</string>
    <string name="button_delete">删除</string>
    <string name="button_relatives">家人</string>
    <string name="button_friends">朋友</string>
    <string name="button_colleges">同事</string>
    <string name="button_classmates">同学</string>
    <string name="button_allgroup">所有群组</string>
    <string name="photo">照片</string>
</resources>
