<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/relatives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_relatives" />

    <Button
        android:id="@+id/friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_friends" />

    <Button
        android:id="@+id/colleages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_colleges" />

    <Button
        android:id="@+id/classmates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_classmates" />

    <Button
        android:id="@+id/allgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_allgroup" />
</LinearLayout>
