<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/photo"
        android:padding="10dp"
        app:srcCompat="@drawable/person" />

    <TextView
        android:id="@+id/showName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_photo"
        android:text="@string/friend_name"
        android:textSize="24sp"
        android:layout_toEndOf="@id/image_photo" />

    <TextView
        android:id="@+id/showPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showName"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/image_photo"
        android:text="@string/friend_phone"
        android:textSize="24sp"
        android:layout_toEndOf="@id/image_photo" />
</RelativeLayout>
